RESOLVED FIXED141229
Fix build warning in WebKit2/Platform/IPC module
https://bugs.webkit.org/show_bug.cgi?id=141229
Summary Fix build warning in WebKit2/Platform/IPC module
Shivakumar J M
Reported 2015-02-03 20:06:05 PST
Got build warning in latest build for EFL: [4014/4888] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/Authentication/WebCredential.cpp.o ../../Source/WebKit2/Platform/IPC/Connection.cpp:376:6: warning: unused parameter ‘alreadyRecordedMessage’ [-Wunused-parameter] bool Connection::sendMessage(std::unique_ptr<MessageEncoder> encoder, unsigned messageSendFlags, bool alreadyRecordedMessage)
Attachments
Patch (1.23 KB, patch)
2015-02-03 20:18 PST, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2015-02-03 20:18:30 PST
Created attachment 246011 [details] Patch Fix build warning by using UNUSED_PARAM macro. might have caused by https://bugs.webkit.org/show_bug.cgi?id=141027.
WebKit Commit Bot
Comment 2 2015-02-03 22:16:43 PST
Comment on attachment 246011 [details] Patch Clearing flags on attachment: 246011 Committed r179592: <http://trac.webkit.org/changeset/179592>
WebKit Commit Bot
Comment 3 2015-02-03 22:16:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.