Fix build warning in WebKit2/Platform/IPC module. https://bugs.webkit.org/show_bug.cgi?id=141229

Reviewed by Chris Dumez.

Fix build warning by using UNUSED_PARAM macro.

* Platform/IPC/Connection.cpp:
(IPC::Connection::sendMessage):


Canonical link: https://commits.webkit.org/159243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179592 268f45cc-cd09-0410-ab3c-d52691b4dbfc